[package]
name = "simulation-server"
version = "0.1.0"
authors = ["Alexander Krikun <krikun.contact@ya.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#internal crates
url_query = {path = "./url_query"}

#external crates
actix-rt = "1.0"
actix-web = "2.0"

argh = "0.1.3"

serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
